--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "license": "MIT",
   "devDependencies": {
     "@faker-js/faker": "^7.6.0"
+  },
+  "dependencies": {
+    "commander": "^10.0.0",
+    "mongodb": "^5.1.0"
   }
 }
