--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "mdb_seed_generator",
-  "description": "Generates a seed data for MongoDB",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "John McCambridge <jmccamb@gmail.com>",
-  "license": "MIT",
+  "module": "index.ts",
+  "type": "module",
   "bin": {
     "mdb_seed_generator": "./index.js"
   },
   "devDependencies": {
+    "bun-types": "latest",
     "@faker-js/faker": "^7.6.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "commander": "^10.0.0",
